--- a/index.html
+++ b/index.html
@@ -10,10 +10,22 @@
     <button onclick="fetchTodos()">Fetch Todos</button>
     <button onclick="logTodos()">Log Todos</button>
     <button onclick="populateTodos()">Populate Todos</button>
+    <!-- <label for="userId">Select UserId:</label>
+    <select name="userId" id="userId">
+      <option value="'userId': 1">1</option>
+      <option value="userId">2</option>
+      <option value="userId">3</option>
+      <option value="userId">4</option>
+      <option value="userId">5</option>
+      <option value="userId">6</option>
+      <option value="userId">7</option>
+      <option value="userId">8</option>
+      <option value="userId">9</option>
+      <option value="userId">10</option>
+    </select>  -->
     <ol id="todo-list">
-    <!-- LIs will go here -->
     </ol>
 
-    
+    <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
